@@ -1,3 +1,8 @@
+2009-09-02  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-arglists.lisp (decode-required-arg): Move LispWorks specific
+	code into swank-lispworks.lisp.
+
 2009-09-01  Stas Boukarev  <stassats@gmail.com>
 
 	* swank-arglists.lisp (decode-required-arg): Arglists for some forms
