@@ -1,5 +1,9 @@
 2009-09-02  Stas Boukarev  <stassats@gmail.com>
 
+	* swank-lispworks.lisp (replace-strings-with-symbols): New function for
+	recursively interning and replacing strings in a list.
+	(arglist): Replace all strings in arglists with symbols.
+
 	* slime.el (slime-net-close): Do not query for process killing
 	confirmation before killing a connection buffer.
 	(slime-buffer-processes): New function for listing processes
